--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Controlledvocabulary : Controlled Vocabulary" />
+    <meta name="description" content="Controlled Vocabulary : Controlled Vocabulary" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Controlledvocabulary</title>
+    <title>Controlled Vocabulary</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mikefourie/ControlledVocabulary">View on GitHub</a>
 
-          <h1 id="project_title">Controlledvocabulary</h1>
+          <h1 id="project_title">Controlled Vocabulary</h1>
           <h2 id="project_tagline">Controlled Vocabulary</h2>
 
             <section id="downloads">
@@ -44,7 +44,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Controlledvocabulary maintained by <a href="https://github.com/mikefourie">mikefourie</a></p>
+        <p class="copyright">Controlled Vocabulary maintained by <a href="https://github.com/mikefourie">mikefourie</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
